--- a/src/assets/scss/font.scss
+++ b/src/assets/scss/font.scss
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 
 @font-face {
-    font-family: "xiaokai";
-    src: url("../../../src/assets/fonts/xiaokai.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "FangZhengFangSong";
+  src:
+    url("../../../src/assets/fonts/FangZhengFangSong-GBK-1.woff") format("woff"),
+    url("../../../src/assets/fonts/FangZhengFangSong-GBK-1.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
 }
