--- a/src/assets/scss/font.scss
+++ b/src/assets/scss/font.scss
@@ -1,10 +1,13 @@
 @charset "UTF-8";
 
-@font-face {
-  font-family: "FangZhengFangSong";
-  src:
-    url("../../../src/assets/fonts/FangZhengFangSong-GBK-1.woff") format("woff"),
-    url("../../../src/assets/fonts/FangZhengFangSong-GBK-1.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
+$fonts: ("FangZhengFangSong": "../../../src/assets/fonts/FangZhengFangSong-GBK-1");
+
+@each $font-name, $font-path in $fonts {
+  @font-face {
+    font-family: $font-name;
+    src: url("#{$font-path}.woff") format("woff"),
+    url("#{$font-path}.woff2") format("woff2");
+    font-style: normal;
+    font-weight: normal;
+  }
 }
